bench/fixtures/tsc_errors_node_modules.txt
src/components/layout/header/navigation/MainMenu.tsx:10:3 - error TS2300: Type 'string' is not assignable to type 'number'.

10   const result = fetchUser(id);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

src/components/layout/header/navigation/MobileMenu.tsx:17:4 - error TS2313: Cannot find name 'Request'.

17   const result = fetchUser(id);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

src/components/layout/footer/SiteFooter.tsx:24:5 - error TS2326: Property 'id' does not exist on type 'User | null'.

24   const result = fetchUser(id);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

src/features/auth/hooks/useAuthSession.ts:31:6 - error TS2339: Argument of type 'unknown' is not assignable to parameter of type 'string'.

31   const result = fetchUser(id);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

src/features/auth/providers/AuthProvider.tsx:38:7 - error TS2352: Module './types' has no exported member 'UserRole'.

38   const result = fetchUser(id);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

node_modules/@tanstack/react-query/build/modern/useQuery.d.ts:45:8 - error TS2365: Type 'string' is not assignable to type 'number'.

45   const result = fetchUser(id);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

node_modules/react-router-dom/dist/index.d.ts:52:9 - error TS2378: Cannot find name 'Request'.

52   const result = fetchUser(id);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

src/api/endpoints/users/getUserProfile.ts:59:10 - error TS2391: Property 'id' does not exist on type 'User | null'.

59   const result = fetchUser(id);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

src/api/endpoints/users/updateUserSettings.ts:66:11 - error TS2404: Argument of type 'unknown' is not assignable to parameter of type 'string'.

66   const result = fetchUser(id);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

src/utils/validators/schemas/userSchema.ts:73:12 - error TS2417: Module './types' has no exported member 'UserRole'.

73   const result = fetchUser(id);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Found 10 errors in 10 files.
